--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@react-pdf/renderer": "^3.1.12",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,8 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-pdf": "^7.3.3",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "react-wheel-of-prizes": "^1.0.9",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.0"
