--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-wheel-of-prizes": "^1.0.9",
+    "sweetalert2": "^11.7.31",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.0"
   },
