--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.11.0",
     "react-pdf": "^7.3.3",
     "react-router-dom": "^6.16.0",
