--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^3.1.12",
     "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.6.2",
     "babel-polyfill": "^6.26.0",
     "draft-js": "^0.11.7",
     "formik": "^2.4.4",
