--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0",
     "draft-js": "^0.11.7",
     "formik": "^2.4.4",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
@@ -31,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-wheel-of-prizes": "^1.0.9",
+    "styled-components": "^6.1.1",
     "sweetalert2": "^11.7.31",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.0"
