--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
@@ -22,17 +19,16 @@
     "formik": "^2.4.4",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-otp-input": "^3.1.0",
     "react-pdf": "^7.3.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
     "react-wheel-of-prizes": "^1.0.9",
-    "styled-components": "^6.1.1",
     "sweetalert2": "^11.7.31",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.0"
