--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,11 @@
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^3.1.12",
     "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
     "babel-polyfill": "^6.26.0",
     "draft-js": "^0.11.7",
     "formik": "^2.4.4",
@@ -25,6 +26,7 @@
     "react-icons": "^4.11.0",
     "react-otp-input": "^3.1.0",
     "react-pdf": "^7.3.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
